spacing fix

--- a/style.css
+++ b/style.css
@@ -1267,7 +1267,7 @@ h1{
   position: relative;
   display: block;
   width: calc(204% + 1.3px);
-  height: 173px;
+  height: 164px;
 }
 
 .custom-shape-divider-top-1705956905 .shape-fill {
@@ -1290,6 +1290,7 @@ h1{
   width: calc(204% + 1.3px);
   height: 173px;
 }
+
 
 .custom-shape-divider-bottom-1705956281 .shape-fill {
   fill: #FFFFFF;
